# mi-pdp

./: .travis.yml  CMakeLists.txt  README.md
jobs/: 1-n32.sh  1-n60.sh  1-n8.sh  g1-n2.sh  g1-serial.sh  g2-n2.sh  g2-n24.sh  g2-n32.sh  g2-n60.sh  g2-serial.sh  g3-n2.sh  g3-n32.sh  g3-n4.sh  g3-n60.sh  g3-serial.sh  start-all.sh  watch-queue.sh
jobs/parallel/: 1-n32.sh  1-n60.sh  1-n8.sh  parallel_job.sh  serial_job.sh  start-all.sh
project/: CMakeLists.txt  Graph.cpp  Graph.h  GraphQueue.cpp  GraphQueue.h  GraphStack.cpp  GraphStack.h  Makefile  Makefile-sequential  SearchStructure.cpp  SearchStructure.h  benchmark.sh  main.cpp  mpisolver.cpp  mpisolver.h  ompsolver.cpp  ompsolver.h  parallel_job.sh  runall  seqsolver.cpp  seqsolver.h  serial_job.sh  test-win.sh  test.sh  times
project/input/: 6  7  a  small
project/input/bipartite/: disjoint
project/input/final-graphs/: custom_14_4.txt  custom_16_5.txt
project/input/non-bipartite/: disjoint
report/: melkamar-mipdp-report.tex
